--- a/example/index.html
+++ b/example/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Playground</title>
+    <title>esri-loader-hooks</title>
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="./index.tsx"></script>
+    <script src="./index.jsx"></script>
   </body>
 </html>
