--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="./index.jsx"></script>
+    <script src="./index.tsx"></script>
   </body>
 </html>
